Fixed navbar on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -811,7 +811,7 @@ body {
       position: absolute;
       top: 0px;
       width: 100%;
-      display: flex;
+      display: none;
       flex-direction: column;
       align-items: center;
       justify-content: center;
